--- a/fdphd.bib
+++ b/fdphd.bib
@@ -627,14 +627,53 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Springer}
 }
  	 	Chan2003 PBG from stack of PIM and NIM
+		photonic band gap from staiick of 
+@article{li2003photonic,
+  title={Photonic band gap from a stack of positive and negative index materials},
+  author={Li, Jensen and Zhou, Lei and Chan, CT and Sheng, P},
+  journal={Physical review letters},
+  volume={90},
+  number={8},
+  pages={083901},
+  year={2003},
+  publisher={APS}
+}
 
 		% analytic 0avgN, Dispersion diagrams, transmission of finite stacks
  	 	Chen2005 Dispersion of defect modes in PBG from DNG DPS
  	 	Jiang2004 Props of 1D PhC containing SNG
  	 	Kocaman Panoiu Zero order PBG in NIM PhC in near infrared
+@article{kocaman2011zero,
+  title={Zero phase delay in negative-refractive-index photonic crystal superlattices},
+  author={Kocaman, S and Aras, MS and Hsieh, P and McMillan, JF and Biris, CG and Panoiu, NC and Yu, MB and Kwong, DL and Stein, A and Wong, CW},
+  journal={Nature photonics},
+  volume={5},
+  number={8},
+  pages={499--505},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
  	 	LGWang2004 Omnidirectional PBG of 1D PhC with SNG
  	 	Liang2003 Unusual narrow bands in LHM stack
  	 	Panoiu2006 ZeroN PBG in PhC superlattices
+@article{panoiu2006zero,
+  title={Zero-n bandgap in photonic crystal superlattices},
+  author={Panoiu, Nicolae C and Osgood Jr, Richard M and Zhang, Shuang and Brueck, Steven RJ and others},
+  journal={JOSA B},
+  volume={23},
+  number={3},
+  pages={506--513},
+  year={2006},
+  publisher={Optical Society of America}
+}
+@article{rybin2015phase,
+  title={Phase diagram for the transition from photonic crystals to dielectric metamaterials},
+  author={Rybin, Mikhail V and Filonov, Dmitry S and Samusev, Kirill B and Belov, Pavel A and Kivshar, Yuri S and Limonov, Mikhail F},
+  journal={arXiv preprint arXiv:1507.08901},
+  year={2015}
+}
+
+
  	 	YihangChen2009 Unusual bands of 1D PhC containing SNG
 
 
@@ -2148,6 +2187,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 
 % == History ==
+% -- 
 @article{bragg1913reflection,
   title={The reflection of X-rays by crystals},
   author={Bragg, WH and Bragg, WL},
@@ -2211,9 +2251,6 @@ lts.fzu.cz/pdf/d-js.pdf
   publisher={AMER INST PHYSICS CIRCULATION FULFILLMENT DIV, 500 SUNNYSIDE BLVD, WOODBURY, NY 11797-2999}
 }
 
-
-
-
 @article{rayleigh1892,
   title={On the influence of obstacles arranged in rectangular order upon the properties of a medium},
   author={Rayleigh, Lord},
@@ -2231,6 +2268,8 @@ lts.fzu.cz/pdf/d-js.pdf
   url = {https://www.cv.nrao.edu/~demerson/bose/bose.html},
   urldate = {2015-07-30}
 }
+
+% -- Artif diels -- /*{{{*/
 @article{kock1948metallic,
   title={Metallic delay lenses},
   author={Kock, Winston E},
@@ -2292,17 +2331,8 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1898},
   publisher={The Royal Society}
 }
-
-@article{shamonina2007metamaterials,
-  title={Metamaterials: How the subject started},
-  author={Shamonina, E and Solymar, L},
-  journal={Metamaterials},
-  volume={1},
-  number={1},
-  pages={12--18},
-  year={2007},
-  publisher={Elsevier}
-}
+/*}}}*/
+% -- Unusual media -- /*{{{*/
 @article{eleftheriades2012transforming,
   title={Transforming electromagnetics using metamaterials},
   author={Eleftheriades, George V and Selvanayagam, Michael},
@@ -2361,10 +2391,7 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2009},
   publisher={Nature Publishing Group}
 }
-
-
-
-
+/*}}}*/
 
 @techreport{merkel1973simulation,
   title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
