big fig of citations and references

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -534,15 +534,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2006},
   publisher={American Association for the Advancement of Science}
 }
-
-@inproceedings{walien2011anti,
-  title={Anti-resonant response of resonant inclusions?},
-  author={Walien, H and Kettunen, Henrik and Qi, Jiaran and Sihvola, Ari},
-  booktitle={General Assembly and Scientific Symposium, 2011 XXXth URSI},
-  pages={1--4},
-  year={2011},
-  organization={IEEE}
-}
 @article{zheludev2010road,
   title={The road ahead for metamaterials},
   author={Zheludev, Nikolay I},
@@ -640,7 +631,20 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 
 		% analytic 0avgN, Dispersion diagrams, transmission of finite stacks
- 	 	Chen2005 Dispersion of defect modes in PBG from DNG DPS
+ 	 	Chen2005 
+		Dispersion of defect modes in PBG from DNG DPS
+@article{chen2006derivation,
+  title={Derivation and characterization of dispersion of defect modes in photonic band gap from stacks of positive and negative index materials},
+  author={Chen, YH and Liang, GQ and Dong, JW and Wang, HZ},
+  journal={Physics Letters A},
+  volume={351},
+  number={6},
+  pages={446--451},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
  	 	Jiang2004 Props of 1D PhC containing SNG
  	 	Kocaman Panoiu Zero order PBG in NIM PhC in near infrared
 @article{kocaman2011zero,
@@ -654,6 +658,18 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Nature Publishing Group}
 }
  	 	LGWang2004 Omnidirectional PBG of 1D PhC with SNG
+@article{wang2004omnidirectional,
+  title={Omnidirectional gap and defect mode of one-dimensional photonic crystals with single-negative materials},
+  author={Wang, Li-Gang and Chen, Hong and Zhu, Shi-Yao},
+  journal={Physical Review B},
+  volume={70},
+  number={24},
+  pages={245102},
+  year={2004},
+  publisher={APS}
+}
+
+
  	 	Liang2003 Unusual narrow bands in LHM stack
  	 	Panoiu2006 ZeroN PBG in PhC superlattices
 @article{panoiu2006zero,
@@ -731,9 +747,83 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2007},
   publisher={APS}
 }
-  	 	Hasar2011 Retrieval of effparam bianisotropic
-  	 	Chalapat2009 Wideband reference plane invariant
-  	 	Li2009
+@article{li2009determination,
+  title={Determination of the effective constitutive parameters of bianisotropic metamaterials from reflection and transmission coefficients},
+  author={Li, Zhaofeng and Aydin, Koray and Ozbay, Ekmel},
+  journal={Physical review E},
+  volume={79},
+  number={2},
+  pages={026610},
+  year={2009},
+  publisher={APS}
+}
+@article{hasar2011retrieval,
+  title={Retrieval approach for determination of forward and backward wave impedances of bianisotropic metamaterials},
+  author={Hasar, Ugur Cem and Barroso, Joaquim Jose},
+  journal={Progress In Electromagnetics Research},
+  volume={112},
+  pages={109--124},
+  year={2011},
+  publisher={EMW Publishing}
+}
+@article{chalapat2009wideband,
+  title={Wideband reference-plane invariant method for measuring electromagnetic parameters of materials},
+  author={Chalapat, Khattiya and Sarvala, Kari and Li, Jian and Paraoanu, Gheorghe Sorin},
+  journal={Microwave Theory and Techniques, IEEE Transactions on},
+  volume={57},
+  number={9},
+  pages={2257--2267},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{silveirinha2007metamaterial,
+  title={Metamaterial homogenization approach with application to the characterization of microstructured composites with negative parameters},
+  author={Silveirinha, M{\'a}rio G},
+  journal={Physical Review B},
+  volume={75},
+  number={11},
+  pages={115104},
+  year={2007},
+  publisher={APS}
+}
+@article{smith2005electromagnetic,
+  title={Electromagnetic parameter retrieval from inhomogeneous metamaterials},
+  author={Smith, DR and Vier, DC and Koschny, Th and Soukoulis, CM},
+  journal={Physical Review E},
+  volume={71},
+  number={3},
+  pages={036617},
+  year={2005},
+  publisher={APS}
+}
+@inproceedings{wallen2011anti,
+  title={Anti-resonant response of resonant inclusions?},
+  author={Wallen, Henrik and Kettunen, Henrik and Qi, Jiaran and Sihvola, Ari},
+  booktitle={General Assembly and Scientific Symposium, 2011 XXXth URSI},
+  pages={1--4},
+  year={2011},
+  organization={IEEE}
+}
+@article{yang2010retrieving,
+  title={Retrieving the effective parameters of metamaterials from the single interface scattering problem},
+  author={Yang, Jianji and Sauvan, Christophe and Paul, T and Rockstuhl, C and Lederer, F and Lalanne, Philippe},
+  journal={Applied Physics Letters},
+  volume={97},
+  number={6},
+  pages={061102},
+  year={2010},
+  publisher={AIP Publishing}
+}
+
+
+
+
+
+
+
+
+
   	 	Smith2005 Elmg parameter retrieval from inhom metamaterials
   	 	Szabo2010
 %% TODO:
@@ -2057,6 +2147,15 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2011},
   publisher={APS}
 }
+@inproceedings{andryieuski2010homogenization,
+  title={Homogenization of metamaterials: Parameters retrieval methods and intrinsic problems},
+  author={Andryieuski, Andrei and Malureanu, Radu and Lavrinenko, Andrei V},
+  booktitle={Transparent Optical Networks (ICTON), 2010 12th International Conference on},
+  pages={1--5},
+  year={2010},
+  organization={IEEE}
+}
+
 @article{andryieuski2012bloch,
   title={Bloch-mode analysis for retrieving effective parameters of metamaterials},
   author={Andryieuski, Andrei and Ha, Sangwoo and Sukhorukov, Andrey A and Kivshar, Yuri S and Lavrinenko, Andrei V},
