--- a/theory.tex
+++ b/theory.tex
@@ -1326,12 +1326,12 @@ or tunes the individual resonance frequency keeping the lattice unchanged (e.g. 
 In the more abstract studies, the structure of the unit cell with its full electrodynamic behaviour is substituted by a flat homogeneous layer characterized only by its effective parameters which may be negative at certain frequencies. % This is equivalent to examining a one-dimensional structure of alternating layers of positive and negative effective parameters.
 This approach is only an approximation, since usually the unit cell behaviour involves its coupling with nonradiative fields, which can no more be taken into account when they are replaced by a layer. The advantage is however in the possibility to use analytic means for understanding of the factors forming the band diagram.
 
-Such an unusual photonic crystal can exhibit a specific \textit{zero order photonic band gap} \cite{li2003photonic, chen2005, panoiu2006zero} when the phase advance through the layer stack is zero, as has been confirmed also on experimental basis \cite{kocaman2011zero}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$ \cite{joannopoulos2011photonic}. 
+Such an unusual photonic crystal can exhibit a specific \textit{zero order photonic band gap} \cite{li2003photonic, chen2006derivation, panoiu2006zero} when the phase advance through the layer stack is zero, as has been confirmed also on experimental basis \cite{kocaman2011zero}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$ \cite{joannopoulos2011photonic}. 
 The characteristic property of the \textit{zero-order} band gap lies in its insensitivity to the structure scaling. The band gap can thus be observed even when the spacing of the hypothetical PhC is deeply subwavelength.
 
-Another type of a band gap with different field pattern were predicted \cite{wang2004} when layers with $\epsrl>0, \murl<0$ and $\epsrl<0, \murl>0$ were stacked. %It is assumed that the energy transfer is mediated through near-field coupling of surface plasmons.
+Another type of a band gap with different field pattern were predicted \cite{wang2004omnidirectional} when layers with $\epsrl>0, \murl<0$ and $\epsrl<0, \murl>0$ were stacked. %It is assumed that the energy transfer is mediated through near-field coupling of surface plasmons.
 
-%Chan2003-PBG_from_stack_of_PIM_and_NIM.pdf
+%Li2003-PBG_from_stack_of_PIM_and_NIM.pdf
 %	hypothetical nondispersive N<0 layers interlaced by air - zero-transmission disp curve of adjacent bandgaps
 %	"avg(n)=0" band gap blocks light even for deeply subwavelength layers
 %	they denote the bandgap above N<0 band as "avg(n)=0" band - is it correct?
@@ -1341,7 +1341,7 @@ Another type of a band gap with different field pattern were predicted \cite{wan
 %Kocaman_Panoiu-Zero_order_PBG_in_NIM_PhC_in_near-infrared.pdf
 %	experimental zero-avg(N) bandgap, denoted also as zero-order photonic band gap
 % 	this band gap is invariant to the wave angle
-%Chen2005_Dispersion_of_defect_modes_in_PBG_from_DNG-DPS.pdf
+%Chen2006_Dispersion_of_defect_modes_in_PBG_from_DNG-DPS.pdf
 %	defect modes in "avg(n)=0" bands, expression is given for dispersion curves
 %Jiang2004-Props_of_1D_PhC_containing_SNG.pdf
 %	analytic proof of the zero-avgN gap,  special by: the frequency is independent of the lattice	
@@ -1357,8 +1357,8 @@ Another type of a band gap with different field pattern were predicted \cite{wan
 %
 %Depine2006-ENG_and_MNG_band_gaps_in_1D_PhC.pdf todo
 
-The common property of structures operating at Bloch wavelengths of comparable magnitude to the cell spacing (i.e. $2\pi a/K \gtrsim 0.2$) is the strong manifestation of the spatial dispersion. Except for special cases, forcing the use of the local effective parameters $\eeff(\omega)$ and $\meff(\omega)$ ceases to give much physical insight, and in the contrary, it leads to confusing deviation from the expected Lorentz oscillator curves, namely \textit{antiresonances} \cite{koschny2003resonant}  and complex values of $\eeff$ and $\meff$ even in lossless media \cite{chan2003}.
-In the author's belief, it is necessary to adopt the full theory of spatial-dispersive media, as sketched in Chapter \ref{chap_nonloc} of this thesis.
+The common property of structures operating at Bloch wavelengths of comparable magnitude to the cell spacing (i.e. $2\pi a/K \gtrsim 0.2$) is the strong manifestation of the spatial dispersion. Except for special cases, forcing the use of the local effective parameters $\eeff(\omega)$ and $\meff(\omega)$ ceases to give much physical insight, and in the contrary, it leads to confusing deviation from the expected Lorentz oscillator curves, namely \textit{antiresonances} \cite{koschny2003resonant}  and complex values of $\eeff$ and $\meff$ even in lossless media \cite{li2003photonic}.
+In the author's belief, it is necessary to adopt the full theory of spatially dispersive media, as sketched in Chapter \ref{chap_nonloc} of this thesis.
 
 %}}}
 %}}}
@@ -1380,7 +1380,7 @@ In the analogy, the earlier metamaterials (or, artificial dielectrics) were most
 \paragraph{The energy criterion} %{{{
 The time-averaged energy of a plane wave in vacuum is constant. Any sort of interaction of MMs or PhCs with the wave is inherently connected to an uneven distribution of the electromagnetic energy in the structure. This may become the rationale for a new criterion: In the MMs near a resonance, the energy is highly concentrated inside a part of the unit cell, typically close to sharp edges of metals or within a particle of high-permittivity dielectric. On the contrary, the resonances in typical PhCs do not concentrate the energy, and instead there is a moderately high intensity of the field in the majority of the space between the scattering structure elements.
 
-As a result, the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. % This is the reason behind the aforementioned parametric scans \cite{shi2007,rybin2015,dominec2014transition} through the unit cell spacing, % (todo add refs from AdMonsoriu ...) since they recognize the nature of each single resonance mode, and justify even the problematic structures at the boundary to be viewed either as a MM or a PhC in different parts of the spectra.
+As a result, the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. % This is the reason behind the aforementioned parametric scans \cite{shi2007,rybin2015phase,dominec2014transition} through the unit cell spacing, % (todo add refs from AdMonsoriu ...) since they recognize the nature of each single resonance mode, and justify even the problematic structures at the boundary to be viewed either as a MM or a PhC in different parts of the spectra.
 On the contrary, a high concentration of the energy within a small part of the structure reduces the sensitivity of the parameters under a moderate disorder in the cell position, which has also been viewed as a trait of metamaterials, \cite{peng2007}: 
 \begin{displayquote}
 	\textit{(the fact that) the randomized positions do not influence significantly the left-handed properties indicates that such composite is different from (...) photonic crystals}
@@ -1459,39 +1459,15 @@ An important question arises as to what extent the homogenization is applicable,
 
 Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
 
-% TODO \cite{Andryieuski2010homogenization}
-% classifies homog approaches into 1) s-parameters, 2) field averaging, 3) quasimode[17], 4) wave phenomena
-% elaborates no. 4 to unambiguously retrieve bulk parameters; but there is still one interface and the simulation volume is large
-\cite{Andryieuski2012-Blochmode_analysis_for_effparam.pdf}
-% 
-% 
-\cite{Hasar2011-Retrieval_of_effparam_bianisotropic.pdf}
-% 
-% 
-\cite{Chalapat2009-Wideband_reference_plane_invariant.pdf}
-% 
-% 
-\cite{Chen2004.pdf}
-% 
-% 
-\cite{Li2009.pdf}
-% 
-% 
-\cite{Rockstuhl2008.pdf}
-% 
-% 
-\cite{Silverinha-Metamaterial_homogenization.pdf}
-% 
-% 
-\cite{Smith2005-Elmg_parameter_retrieval_from_inhom_metamaterials.pdf}
-% 
-% 
-\cite{Szabo2010.pdf}
-% 
-% 
-\cite{Yang2010.pdf}
-% 
-% 
+\cite{li2009determination}
+\cite{hasar2011retrieval}
+\cite{chalapat2009wideband}
+\cite{silveirinha2007metamaterial}
+\cite{smith2005electromagnetic}
+\cite{wallen2011anti}
+\cite{yang2010retrieving}
+
+
 
 
 %Chakrab.: The homogenizable metamaterials were assigned an effective permeability using the procedure described by Koschny et al [16]
@@ -1501,7 +1477,11 @@ Homogenization is not a search for an existing truth, but rather a somewhat arbi
 \cite{rockstuhl2008transition}
 \cite{paul2011reflection}
 \cite{andryieuski2012bloch}
+
 \cite{andryieuski2010homogenization} 
+% classifies homog approaches into 1) s-parameters, 2) field averaging, 3) quasimode[17], 4) wave phenomena
+% elaborates no. 4 to unambiguously retrieve bulk parameters; but there is still one interface and the simulation volume is large
+
 \cite{simovski2007bloch}
 \cite{simovski2009material}
 \cite{simovski2011electromagnetic}
